--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ nav {
   height: 48px;
   display: flex;
   justify-content: space-between;
+  background-color: white;
 }
 nav h1 {
   display: flex;
-  flex-direction: row;
   align-items: center;
   padding: 10px 12px;
   margin: 0;
@@ -28,3 +28,31 @@ nav a {
   align-items: center;
 }
 
+header{
+  margin: 50px 0; /* heigh of nav =48px */
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  background-image: url("images/header-illsutration-mobile@2x.png");
+  background-position: center;
+  background-size: cover;
+}
+header h1, p{
+  text-align: center;
+  margin: 50px 24px 0 24px;
+  color: #172B4D;
+}
+header h1{
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  
+}
+header h1 span{
+  color: #36B37E;
+}
+header p{
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+}
