--- a/style.css
+++ b/style.css
@@ -72,12 +72,15 @@ header ul  {
 header ul li {
   width: 20px;
   height: 20px;
+  color: #28352F;
 }
 header a {
   width: 40px;
   height: 40px;
   text-decoration: none;
   margin-top: 100px;
+  color: #28352F;
+  text-decoration: none;
 }
 
 .btn-round{
