--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ header {
   background-size: cover;
 }
 
-header h1, p {
+header h1, 
+p {
   text-align: center;
   margin: 50px 24px 0 24px;
   color: #172b4d;
