--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   --color-text: #28352f;
 }
 
-nav {
+header {
   position: absolute;
   top: 0;
   width: 100vw;
@@ -22,14 +22,14 @@ nav {
   color: var(--color-text);
 }
 
-nav h1 {
+header h1 {
   display: flex;
   align-items: center;
   padding: 10px 12px;
   margin: 0;
 }
 
-nav .toggleNav {
+header .toggleNav {
   width: 40px;
   height: 40px;
   margin: 4px 24px 0;
@@ -41,7 +41,7 @@ nav .toggleNav {
 }
 
 #headline {
-  margin: 50px 0; /* heigh of nav =48px */
+  margin: 50px 0; /* heigh of header =48px */
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -96,10 +96,6 @@ p {
   width: 20px;
   height: 20px;
   color: var(--color-text);
-}
-
-#headline .social:hover {
-  color: var(--color-primary-dark);
 }
 
 .btn-round {
