--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ p {
   color: var(--color-text);
 }
 
+#headline .social:hover {
+  color: var(--color-primary-dark);
+}
+
 .btn-round {
   border: 1px solid #dfe1e6;
   border-radius: 50%;
