--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ header h1 {
   margin: 0;
 }
 
+header h1 a{
+  text-decoration: none;
+  color: var(--color-text);
+}
+
 header .toggleNav {
   width: 40px;
   height: 40px;
