--- a/style.css
+++ b/style.css
@@ -116,8 +116,7 @@ p {
 }
 
 #works {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   justify-content: center;
   align-items: center;
 }
@@ -126,16 +125,32 @@ p {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
+  text-align: center;
+  grid-row: 1 / 2;
+  padding: 0;
+  margin: 0;
 }
 
 #works hr {
   width: 48px;
   height: 4px;
+  margin-top: 10px;
   background-color: var(--color-primary-dark);
   border-radius: 24px;
+  grid-row: 2 / 3;
+  order: 3;
+}
+
+#works ul {
+  list-style: none;
+  display: grid;
+  grid-row: 3 / 4;
+  order: -1;
 }
 
 #works .work {
+  width: 325px;
+  height: 475px;
   background-color: white;
   border: 1px solid #D0D9D4;
   border-radius: 8px;
