--- a/style.css
+++ b/style.css
@@ -151,7 +151,64 @@ p {
 
 #works ul .work {
   width: 325px;
-  height: 475px;
+  height: 500px;
   border: 1px solid #D0D9D4;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+#works ul .work img {
+  width: 100%;
+  height: 275px;
+  background-color: var(--color-primary-light);
+}
+
+#works ul .work div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+#works ul .work div h2 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  margin-top: 6px;
+}
+
+#works ul .work div .list-languages {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-top: 16px;
+}
+
+#works ul .work div .list-languages li {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  border-radius: 4px;
+  padding: 8px 12px 8px 12px;
+  margin-right: 8px;
+  margin-top: 8px;
+  color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
+}
+
+#works ul .work div button {
+  width: max-content;
+  margin-top: 12px;
+  padding: 12px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  background-color: var(--color-primary-dark);
 }
