--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ p {
 #works ul .work div .list-languages {
   list-style: none;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-top: 16px;
@@ -202,6 +203,44 @@ p {
 }
 
 #works ul .work div button {
+  width: max-content;
+  margin-top: 12px;
+  padding: 12px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  background-color: var(--color-primary-dark);
+}
+
+#aboutme {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#aboutme h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+  margin: 50px 12px 24px 12px;
+}
+
+#aboutme p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  margin: 0 12px 0 12px;
+}
+
+.buttons {
   width: max-content;
   margin-top: 12px;
   padding: 12px;
