--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ p {
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
+  margin-top: 24px;
   background-color: var(--color-primary-dark);
 }
 
