--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   --color-secondary: #172b4d;
   --color-text: #28352f;
   --color-border: #e2cfcf;
-
 }
 
 .tags {
@@ -92,7 +91,6 @@ header .toggleNav {
 
 #headline {
   margin: 50px 0;
-  /* heigh of header =48px */
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -129,6 +127,14 @@ p {
   justify-content: space-evenly;
 }
 
+.btn-round {
+  border: 1px solid #dfe1e6;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #headline .btn-round {
   width: 40px;
   height: 40px;
@@ -149,18 +155,16 @@ p {
   color: var(--color-primary-dark);
 }
 
-.btn-round {
-  border: 1px solid #dfe1e6;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #works {
   display: grid;
   justify-content: center;
   align-items: center;
+}
+
+footer h2 {
+  padding: 0;
+  margin: 24px;
+  text-align: center;
 }
 
 #works h2 {
@@ -187,7 +191,6 @@ p {
   align-items: center;
   list-style: none;
   padding: 0;
-  /* remove default padding */
   grid-row: 3 / 4;
 }
 
@@ -337,12 +340,6 @@ footer {
   background-size: cover;
 }
 
-footer h2 {
-  padding: 0;
-  margin: 24px;
-  text-align: center;
-}
-
 footer form {
   display: flex;
   flex-direction: column;
@@ -361,14 +358,14 @@ textarea {
   border-radius: 4px;
 }
 
+footer textarea {
+  min-height: 100px;
+}
+
 footer form label input:focus,
 textarea:focus {
   outline: none !important;
-  border:2px solid var(--color-primary-dark);
-}
-
-footer textarea {
-  min-height: 100px;
+  border: 2px solid var(--color-primary-dark);
 }
 
 .btn-contact {
@@ -382,9 +379,6 @@ footer textarea {
   list-style: none;
   padding: 0;
   margin-top: 50px;
-}
-
-.social-icons {
   font-size: 20px;
 }
 
@@ -398,7 +392,7 @@ footer textarea {
 }
 
 .social-icons a:hover {
-  color: var(--color-primary-dark)
+  color: var(--color-primary-dark);
 }
 
 .my-email {
@@ -406,6 +400,5 @@ footer textarea {
   font-size: 20px;
   font-weight: 400;
   line-height: 32px;
-  margin-bottom: 147px;
   margin: 24px 0 147px 0;
 }
