--- a/style.css
+++ b/style.css
@@ -97,19 +97,22 @@ header .toggleNav {
 #headline {
   margin: 50px 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-image: url("images/header-illsutration-mobile@2x.png");
   background-position: top;
   background-size: cover;
 }
 
+#headline .headline-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #headline h1,
 p {
   text-align: center;
-  margin: 50px 24px 0 24px;
+  margin: 40px 24px 0 24px;
   color: var(--color-secondary);
 }
 
@@ -124,7 +127,7 @@ p {
 }
 
 #headline ul {
-  margin: 60px 24px 0 24px;
+  margin: 40px 24px 0 0;
   padding: 0;
   width: 170px;
   list-style: none;
@@ -143,7 +146,7 @@ p {
 #headline .btn-round {
   width: 40px;
   height: 40px;
-  margin-top: 100px;
+  margin-top: 40px;
   text-decoration: none;
 }
 
@@ -454,11 +457,10 @@ textarea:focus {
 
   #headline .headline-wrapper {
     width: 920px;
-    height: 756px;
+    height: 701px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 72px;
   }
 
   #headline .headline-wrapper h1 {
@@ -466,6 +468,7 @@ textarea:focus {
     font-size: 40px;
     line-height: 60px;
     letter-spacing: 0.37px;
+    margin: 0px;
   }
 
   #headline .headline-wrapper p {
@@ -480,5 +483,7 @@ textarea:focus {
   #headline .headline-wrapper .btn-round {
     margin-top: 24px;
   }
+
+  /* ****Work Section**** */
 
 }
