--- a/style.css
+++ b/style.css
@@ -361,23 +361,25 @@ footer h2 {
   background-color: white;
 }
 
+/* ****Footer Section**** */
+
 footer {
   background-image: url("images/backgroundfooter.png");
   background-position: top;
   background-size: cover;
 }
 
-footer form {
+footer .footer-wrapper form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-footer form label {
+footer .footer-wrapper form label {
   margin-top: 24px;
 }
 
-footer form label input,
+footer .footer-wrapper form label input,
 textarea {
   width: 300px;
   padding: 15px;
@@ -385,11 +387,11 @@ textarea {
   border-radius: 4px;
 }
 
-footer textarea {
+footer .footer-wrapper textarea {
   min-height: 100px;
 }
 
-footer form label input:focus,
+footer .footer-wrapper form label input:focus,
 textarea:focus {
   outline: none !important;
   border: 2px solid var(--color-primary-dark);
@@ -551,6 +553,50 @@ textarea:focus {
     width: 100%;
     flex-direction: row;
     justify-content: space-evenly;
+  }
+
+  /* ****Footer Section**** */
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer .footer-wrapper{
+    width: 80vw;
+    min-height: 500px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 80px;
+  }
+
+  footer .footer-wrapper h2{
+    width: 450px;
+    font-size: 30px;
+    margin-right: 24px;
+  }
+
+  footer .footer-wrapper form {
+    width: 680px;
+  }
+
+  footer .footer-wrapper form label {
+    width: 100%;
+  }
+
+  footer .footer-wrapper form label input,
+  textarea {
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  footer .social-icons {
+    margin-top: 145px;
+  }
+
+  footer .my-email{
+    display: none;
   }
 
 }
