--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ footer h2 {
 
 #works .work-wrapper .list-work .work {
   width: 330px;
-  height: 500px;
+  height: 475px;
   border: 1px solid var(--color-border);
   border-radius: 8px;
   display: flex;
@@ -478,10 +478,11 @@ textarea:focus {
 
   #headline .headline-wrapper {
     width: 920px;
-    height: 701px;
+    height: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 60px;
   }
 
   #headline .headline-wrapper h1 {
@@ -523,7 +524,12 @@ textarea:focus {
 
   #works .work-wrapper .list-work .work {
     width: 369px;
-    height: 500px;
+    height: 475px;
+  }
+
+  #works .work-wrapper .list-work .work h2 {
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   /* ****About me**** */
