add images to project in work section

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   --color-primary: #ffe7e8;
   --color-primary-light: #f9eaea;
   --color-secondary: #172b4d;
-  --color-text: #28352f;
+  --color-text: #352828;
   --color-border: #e2cfcf;
 }
 
