--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ p {
   grid-template-rows: repeat(3, auto);
 }
 
-footer h2 {
+footer .contact-wrapper h2 {
   padding: 0;
   margin: 24px;
   text-align: center;
@@ -315,6 +315,7 @@ footer h2 {
 }
 
 #about-me .about-me-wrapper .list-skill {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -324,7 +325,6 @@ footer h2 {
 
 #about-me .about-me-wrapper .list-skill .skill {
   margin-top: 24px;
-  margin-right: 24px;
   width: 325px;
   height: 375px;
   border: 1px solid var(--color-border);
@@ -371,17 +371,31 @@ footer {
   background-size: cover;
 }
 
-footer .footer-wrapper form {
+footer .footer-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+footer .contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .contact-wrapper form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-footer .footer-wrapper form label {
+footer .contact-wrapper form label {
   margin-top: 24px;
 }
 
-footer .footer-wrapper form label input,
+footer .contact-wrapper form label input,
 textarea {
   width: 300px;
   padding: 15px;
@@ -389,13 +403,13 @@ textarea {
   border-radius: 4px;
 }
 
-footer .footer-wrapper form label input:focus,
+footer .contact-wrapper form label input:focus,
 textarea:focus {
   outline: none !important;
   border: 2px solid var(--color-primary-dark);
 }
 
-footer .footer-wrapper textarea {
+footer .contact-wrapper textarea {
   min-height: 100px;
 }
 
@@ -530,10 +544,11 @@ footer .footer-wrapper textarea {
     height: 475px;
   }
 
-  footer .footer-wrapper h2 {
-    width: 450px;
+  footer .contact-wrapper h2 {
+    width: 465px;
     font-size: 30px;
     margin-right: 24px;
+    text-align: start;
   }
 
   #works .work-wrapper .list-work .work h2 {
@@ -570,42 +585,53 @@ footer .footer-wrapper textarea {
     flex-wrap: wrap;
   }
 
+  #about-me .about-me-wrapper .list-skill .skill {
+    margin-right: 24px;
+  }
+
   /* ****Footer Section**** */
 
   footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("images/illustration-2-contact-form-desktop@2x.png");
-    background-size: contain;
-    background-position: top;
-    background-repeat: no-repeat;
   }
 
   footer .footer-wrapper {
+    padding-bottom: 140px;
+    background: url("images/illustration-2-contact-form-desktop@2x.png");
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+  }
+
+  footer .contact-wrapper {
+    box-sizing: border-box;
     width: 80vw;
     min-height: 500px;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     margin-top: 80px;
   }
 
-  footer .footer-wrapper form {
-    width: 680px;
+  footer .contact-wrapper form {
+    width: 600px;
+    align-items: flex-start;
   }
 
-  footer .footer-wrapper form label {
+  footer .contact-wrapper form label {
     width: 100%;
   }
 
-  footer .footer-wrapper form label input,
+  footer .contact-wrapper form label input,
   textarea {
     box-sizing: border-box;
     width: 100%;
   }
 
   footer .social-icons {
-    margin-top: 145px;
+    margin-top: 0px;
   }
 
   footer .my-email {
@@ -613,7 +639,7 @@ footer .footer-wrapper textarea {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   #works .work-wrapper .list-work {
     display: grid;
     justify-content: center;
