fix linter error

--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@ footer .contact-wrapper textarea {
   }
 
   footer .social-icons {
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   footer .my-email {
