--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ header h1 {
 
 header h1 a {
   text-decoration: none;
-  color: var(--color-text);
+  color: var(--color-secondary);
 }
 
 header nav ul {
@@ -232,6 +232,8 @@ footer .contact-wrapper h2 {
   width: 100%;
   height: 275px;
   background-color: var(--color-primary-light);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 #works .work-wrapper .list-work .work div {
@@ -557,7 +559,15 @@ footer .contact-wrapper textarea {
   #works .work-wrapper .list-work .work {
     width: 369px;
     height: 475px;
+    transition: all 0.4s;
   }
+
+  #works .work-wrapper .list-work .work:hover {
+    transform: translateY(-15px);
+    border: 1px solid var(--color-primary-dark);
+    box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+  }
+
 
   #works .work-wrapper .list-work .work h2 {
     padding-left: 16px;
