--- a/style.css
+++ b/style.css
@@ -160,11 +160,13 @@ p {
   height: 40px;
   text-decoration: none;
   margin-top: 100px;
-  color: var(--color-text);
+  color: var(--color-secondary);
+  transition: all 0.3s;
 }
 
 .social:hover {
   color: var(--color-primary-dark);
+  transform: scale(1.3);
 }
 
 /* ****Works Section**** */
@@ -428,6 +430,10 @@ footer .contact-wrapper textarea {
   margin-top: 50px;
   font-size: 20px;
 }
+.social-icon {
+  transition: all 0.3s;
+  font-size: 24px;
+}
 
 .social-icons a {
   display: flex;
@@ -438,8 +444,9 @@ footer .contact-wrapper textarea {
   list-style: none;
 }
 
-.social-icons a:hover {
+.social-icon:hover {
   color: var(--color-primary-dark);
+  transform: scale(1.3);
 }
 
 .my-email {
@@ -567,7 +574,6 @@ footer .contact-wrapper textarea {
     border: 1px solid var(--color-primary-dark);
     box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
   }
-
 
   #works .work-wrapper .list-work .work h2 {
     padding-left: 16px;
